codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_one_message.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
assertion_line: 235
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 3 },
    content: [
        "• Queued follow-up inputs               ",
        "  ↳ Hello, world!                       ",
        "    ↑ edit all · enter send             ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
